# labview_mcp

./: .gitignore  AI Assistant for LabVIEW.vipb  PLAN.md  README.md  go.mod  image_test.py  main.py  pyproject.toml
LabVIEW_Server/: LabVIEW_Server.lvlps  LabVIEW_Server.lvproj
LabVIEW_Server/Scripting Server/: Destroy Request Events.vi  Init Module.vi  Main.vi  Obtain Request Events.vi  Request Events--cluster.ctl  Scripting Server.lvlib  Test Scripting Server API.vi
LabVIEW_Server/Tools/: Create VI function name.vi  Get Python Code.vi  Get VI Function String.vi  Get VIs.vi  Install Server.vi  Tools.lvlib  Update MCP Server.vi
cmd/labview-bridge/: main.go
cmd/mcp-server/: main.go
docs/: ipc-protocol.md  tools.md  vi-mapping.md
docs/plans/: 2025-12-05-eliminate-bridge-design.md
internal/ipc/: client.go  protocol.go
internal/mcpserver/: server.go  tools.go
internal/python/: executor.go
wrapper/: add_object.py  connect_objects.py  get_object_terminals.py  get_vi_error_list.py  new_vi.py  save_vi.py  start_module.py  stop_module.py
