# Python dependencies for LabVIEW COM wrapper scripts
# These scripts are standalone - not a Python package
# Used only on Windows for COM integration with LabVIEW

[project]
name = "labview-mcp-wrappers"
version = "0.1.0"
description = "Python COM wrapper scripts for LabVIEW MCP server"
requires-python = ">=3.8"
dependencies = [
    "pywin32>=310; sys_platform == 'win32'",
]

[tool.uv]
package = false
